CSS/style.css
/* ... */
.host-card {
  width: 31%;
  height: auto;
  margin: 15px 0;
}

.host-card-content {
  width: auto;
  height: 100%;
  display: flex;
  flex-direction: column; /* adjust here for other variant card */
  overflow: visible; /* adjust here for other variant card */
}

.host-card-content img{
  object-fit: cover;
  width: 100%; /* adjust here for other variant card */
  max-height: 125px;
  min-height: 125px;
  padding: 5px;
  border-radius: 20px 20px 0 0;
}

.scoring {
  font-size: 0.75em;
  white-space: nowrap;
}

/* --------------------------------- Stars --------------------------------- */

.stars {
  width: 32%;
  height: auto;
}

.stars-listing {
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  justify-content: flex-start; /* or flex-between and delete gap ?*/
  gap: 0.1%;
  width: auto;
  height: auto;
  margin: 5px 0;
}

.star-card {
  width: 100%;
  height: auto;
  margin: 15px 0;
}

.star-card-content {
  width: auto;
  height: 100%;
  min-height: 144px;
  display: flex;
  flex-direction: row; /* adjust here for other variant card */
  overflow: hidden; /* adjust here for other variant card */
}

.star-card-content .card-description{
  padding-top: 18px;
  height: auto;
}

.star-image {
  position: relative;
  width: 220px;
  height: auto;
}

.star-image img{
  position: absolute;
  object-fit: cover;
  width: 100%;
  height: 100%;
  padding: 5px;
  border-radius: 20px 0 0 20px;
}

/* -------------------------------------------------------------------------- */
/*                                 Activities                                 */
/* -------------------------------------------------------------------------- */

.main-activities-container {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: auto;
  padding: 20px 0;
}

.activities-listing {
  display: flex;
  flex-direction: row;
  gap: 3%;
}

.activity-card {
  width: 100%;
  height: auto;
  margin: 15px 0;
}

.activity-card-content {
  display: flex;
  flex-direction: column;
  overflow: hidden;
  width: 100%;
  height: 100%;
}

.activity-image {
  position: relative;
  width: 100%;
  min-height: 389px; /* change height card here */
}

.activity-image img {
  position: absolute;
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 20px 20px 0 0;
}

.activity-card-title {
  display: flex;
  align-items: center;
  width: 100%;
  height: 100%;
  padding: 18px;
}

/* --------------------------------- Footer --------------------------------- */

.main-footer-container {
  width: 100%;
  height: auto;
  background-color: #f2f2f2;
  margin-top: 15px;
  padding: 0 70px;
}

footer nav {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: flex-start;
  width: 100%;
  height: auto;
  gap: 15%;
}

footer nav {
  padding-bottom: 58px;
}

footer h3 {
  margin-top: 45px;
  margin-bottom: 14px;
}

footer li {
  width: fit-content; /* limit size of li from text width */
  margin: 6px 0;
}



/* -------------------------------------------------------------------------- */
/*                              Responsive tablet                             */
/* -------------------------------------------------------------------------- */

@media screen and (max-width: 992px) {

/* --------------------------------- Global --------------------------------- */
  .main-container {
    padding: 0 72px;
  }

/* ---------------------------------- Hosts --------------------------------- */

  .main-hosts-container {
    flex-direction: column;
    padding: 20px O;
    gap: 50px;
  }

  .hosts {
    width: 100%;
  }

/* --------------------------------- Stars --------------------------------- */
  
  .stars {
    width: 100%;
  }

  .stars-listing {
    flex-direction: row;
    gap: 3.5%;
  }

  .star-card {
    width: 31%;
    height: auto;
    margin: 15px 0;
  }

/* ------------------------------- Activities ------------------------------- */

.activities-listing {
  display: flex;
  gap: 6%;
}

.activity-image {
  min-height: 211px; /* change height card here */
}

}
/* ... */

